bugfix: hero layout bugfix

--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -4,7 +4,7 @@
 	width: 100vw;
 	background-size: contain;
 	background-attachment: fixed;
-	-webkit-background-size: cover;
+	-webkit-background-size: contain;
 	background-position: center;
 	position: relative;
 	height: 100vh;
@@ -12,9 +12,6 @@
 	place-items: center;
 	position: relative;
 
-	@media screen and (max-width: 767px) {
-		min-height: 500px;
-	}
 	.overlay {
 		position: absolute;
 		top: 0;
