--- a/src/assets/styles/navbar.less
+++ b/src/assets/styles/navbar.less
@@ -2,6 +2,9 @@
   box-shadow: 0 5px 20px -10px #000;
   padding: 10px;
   transition: 0.3s ease-in;
+  .navbar-menu {
+    box-shadow: unset !important;
+  }
   .navbar-brand {
     .navbar-burger {
       height: unset !important;
@@ -37,7 +40,7 @@
     &:hover {
       color: black;
       background-color: inherit !important;
-
+      
       &::before {
         width: 100%;
         color: inherit;
